# vehicle-dynamics-sim

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.hpp  Main.cpp  MyWindow.cpp  MyWindow.hpp  README.md  StereoCam.cpp  StereoCam.hpp  simpleVehicle.cpp  simpleVehicle.urdf
CAD/: chassis.dae  wheel.dae  wheel2.dae
CAD/markerboards/: marker0board.dae  marker10board.dae  marker11board.dae  marker12board.dae  marker13board.dae  marker14board.dae  marker15board.dae  marker16board.dae  marker17board.dae  marker18board.dae  marker19board.dae  marker1board.dae  marker2board.dae  marker3board.dae  marker4board.dae  marker5board.dae  marker6board.dae  marker7board.dae  marker8board.dae  marker9board.dae
data/: q_out.txt
data/good_data/: q_out.txt  time.txt
